Fix alignment in media-query

--- a/Bootstrap/TinDog/css/styles.css
+++ b/Bootstrap/TinDog/css/styles.css
@@ -194,7 +194,7 @@ body {
 
 /* media queries */
 @media (max-width: 1028px) {
-    #title {
+    #title .container-fluid {
         text-align: center;
     }
     .title-img {
